[package]
name = "serial_usb_passthrough"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl", "defmt"] }
embedded-hal = { version = "1.0.0" }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
nb = "1"
embedded-io = "0.6"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = "0.7.5"
cortex-m-rt = "0.7.5"
